force-app/main/default/objects/Brokerage_Scheme__c/Brokerage_Scheme__c.object-meta.xml
<CustomObject>
    <label>Brokerage Scheme</label>
    <nameField>
        <label>Brokerage Scheme Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brokerage Schemes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>