force-app/main/default/objects/Brokerage_Scheme__c/fields/AOP_CP__c.field-meta.xml
<CustomField>
    <fullName>AOP_CP__c</fullName>
    <label>AOP CP %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>