force-app/main/default/objects/Brokerage_Scheme__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Sent for Approval</fullName>
                <default>true</default>
                <label>Not Sent for Approval</label>
            </value>
            <value>
                <fullName>Pending Level 1 Approval</fullName>
            </value>
            <value>
                <fullName>Rejected by Level 1</fullName>
            </value>
            <value>
                <fullName>Pending Level 2 Approval</fullName>
            </value>
            <value>
                <fullName>Approved by Level 2</fullName>
            </value>
            <value>
                <fullName>Rejected by Level 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>