force-app/main/default/objects/Brokerage_Scheme__c/fields/Base_Brokerage_for_OS_NRI__c.field-meta.xml
<CustomField>
    <fullName>Base_Brokerage_for_OS_NRI__c</fullName>
    <label>Base Brokerage for OS / NRI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>