force-app/main/default/objects/Brokerage_Scheme__c/fields/Base_Brokerage_Without_AOP__c.field-meta.xml
<CustomField>
    <fullName>Base_Brokerage_Without_AOP__c</fullName>
    <formula>IF(
	OR(
		ISPICKVAL(Type__c,&apos;Local&apos;),
		ISPICKVAL(Type__c,&apos;Both&apos;)
	),
	Base_Brokerage_for_Local_Bookings__c-AOP_CP__c,
	Base_Brokerage_for_OS_NRI__c - AOP_CP__c
 )

/*IF( ISPICKVAL(Type__c,&apos;Local&apos;) ,Base_Brokerage_for_Local_Bookings__c-AOP_CP__c,		
				Base_Brokerage_for_OS_NRI__c - AOP_CP__c
 )*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Base Brokerage Without AOP%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>