force-app/main/default/objects/Brokerage_Scheme__c/fields/Brokerage_Scheme_Unique_No__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Scheme_Unique_No__c</fullName>
    <displayFormat>BS-{000000}</displayFormat>
    <label>Brokerage Scheme Unique No.</label>
    <type>AutoNumber</type>
</CustomField>