force-app/main/default/objects/Brokerage_Scheme__c/fields/File_Attached__c.field-meta.xml
<CustomField>
    <fullName>File_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check the Schemes contains attachment .</description>
    <label>File Attached</label>
    <type>Checkbox</type>
</CustomField>