force-app/main/default/objects/Brokerage_Scheme__c/fields/Legacy_booking_treated__c.field-meta.xml
<CustomField>
    <fullName>Legacy_booking_treated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legacy booking treated</label>
    <type>Checkbox</type>
</CustomField>