force-app/main/default/objects/Brokerage_Scheme__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Brokerage Schemes</relationshipLabel>
    <relationshipName>Brokerage_Schemes</relationshipName>
    <type>Lookup</type>
</CustomField>