force-app/main/default/objects/Brokerage_Scheme__c/fields/Run_Brokerage_Batch__c.field-meta.xml
<CustomField>
    <fullName>Run_Brokerage_Batch__c</fullName>
    <label>Run_Brokerage_Batch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Run</fullName>
            </value>
            <value>
                <fullName>Stop</fullName>
                <default>true</default>
                <label>Stop</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>