force-app/main/default/objects/Brokerage_Scheme__c/fields/Scheme_Approver_2__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Approver_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scheme Approver 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Brokerage_Schemes1</relationshipName>
    <type>Lookup</type>
</CustomField>