force-app/main/default/objects/Brokerage_Scheme__c/fields/Scheme_Submit_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Submit_for_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scheme Submit for Approval</label>
    <type>Checkbox</type>
</CustomField>