force-app/main/default/objects/Brokerage_Scheme__c/fields/Tower__c.field-meta.xml
<CustomField>
    <fullName>Tower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tower</label>
    <referenceTo>Tower__c</referenceTo>
    <relationshipLabel>Brokerage Schemes</relationshipLabel>
    <relationshipName>Brokerage_Schemes</relationshipName>
    <type>Lookup</type>
</CustomField>