force-app/main/default/objects/Brokerage_Scheme__c/validationRules/AOP_CP_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>AOP_CP_is_Required</fullName>
    <active>false</active>
    <errorConditionFormula>AND(DATEVALUE(CreatedDate)&gt;= DATE(2024,04,11),ISNULL(AOP_CP__c))</errorConditionFormula>
    <errorDisplayField>AOP_CP__c</errorDisplayField>
    <errorMessage>Please Enter the AOP CP% on the Brokerage Scheme.</errorMessage>
</ValidationRule>