force-app/main/default/objects/Brokerage_Scheme__c/validationRules/Base_Brokerage_for_Local_Bookings_Req.validationRule-meta.xml
<ValidationRule>
    <fullName>Base_Brokerage_for_Local_Bookings_Req</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(  Type__c  ,&quot;Local&quot; ),ISNULL(  Base_Brokerage_for_Local_Bookings__c ))</errorConditionFormula>
    <errorDisplayField>Base_Brokerage_for_Local_Bookings__c</errorDisplayField>
    <errorMessage>Base Brokerage for local bookings should not be blank</errorMessage>
</ValidationRule>