force-app/main/default/objects/Brokerage_Scheme__c/validationRules/Base_Brokerage_for_OS_NRI_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Base_Brokerage_for_OS_NRI_blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	(Base_Brokerage_for_OS_NRI__c &gt; 0),
	Start_Date__c &gt;=DATE(2024,04,01)
)</errorConditionFormula>
    <errorDisplayField>Base_Brokerage_for_OS_NRI__c</errorDisplayField>
    <errorMessage>Base Brokerage for OS / NRI should be blank.</errorMessage>
</ValidationRule>