force-app/main/default/objects/Brokerage_Scheme__c/validationRules/Both_fields_should_not_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Both_fields_should_not_be_blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Type__c ,&quot;Both&quot; ),	ISNULL(Base_Brokerage_for_OS_NRI__c ),	Start_Date__c &lt; DATE(2024,04,01) )</errorConditionFormula>
    <errorMessage>Base Brokerage For OS/NRI should not be blank</errorMessage>
</ValidationRule>