force-app/main/default/objects/Brokerage_Scheme__c/validationRules/Cannot_Edit_Approved_by_L2_Scheme.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Edit_Approved_by_L2_Scheme</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
NOT(ISNEW()),
text(Approval_Status__c)= &apos;Approved by Level 2&apos;
)</errorConditionFormula>
    <errorMessage>You cannot edit this scheme.</errorMessage>
</ValidationRule>