force-app/main/default/objects/Brokerage_Scheme__c/validationRules/Cannt_uncheck_checkbox_if_scheme_is_Appr.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannt_uncheck_checkbox_if_scheme_is_Appr</fullName>
    <active>false</active>
    <description>Cannot uncheck checkbox if scheme is Approved</description>
    <errorConditionFormula>AND(
ISPICKVAL( Approval_Status__c ,&apos;Approved by Level 2&apos;),
 Scheme_Submit_for_Approval__c = false
)</errorConditionFormula>
    <errorMessage>Approved Scheme cannot re-send for Approval.</errorMessage>
</ValidationRule>