force-app/main/default/objects/Brokerage_Scheme__c/validationRules/End_Date_should_be_greater_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_should_be_greater_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date__c &lt; Start_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date does not comes before Start Date.</errorMessage>
</ValidationRule>