force-app/main/default/objects/Brokerage_Scheme__c/validationRules/If_both_both_fields_should_not_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>If_both_both_fields_should_not_be_blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(  Type__c ,&quot;Both&quot; ) , ISNULL(  Base_Brokerage_for_Local_Bookings__c)  )</errorConditionFormula>
    <errorMessage>Base Brokerage For Local Bookings should not be blank</errorMessage>
</ValidationRule>