force-app/main/default/objects/Brokerage_Scheme__c/validationRules/If_NRI_Base_brokerage_local_should_be_bl.validationRule-meta.xml
<ValidationRule>
    <fullName>If_NRI_Base_brokerage_local_should_be_bl</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(  Type__c  ,&quot;NRI&quot; ) , NOT(ISNULL(  Base_Brokerage_for_Local_Bookings__c )) )</errorConditionFormula>
    <errorDisplayField>Base_Brokerage_for_Local_Bookings__c</errorDisplayField>
    <errorMessage>Base Brokerage for local bookings should not be blank</errorMessage>
</ValidationRule>