force-app/main/default/objects/Brokerage_Scheme__c/validationRules/Record_name_Character_length_limitation.validationRule-meta.xml
<ValidationRule>
    <fullName>Record_name_Character_length_limitation</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(Name) &gt; 50</errorConditionFormula>
    <errorMessage>Field length cannot be more than 50</errorMessage>
</ValidationRule>