force-app/main/default/objects/Brokerage_Scheme__c/validationRules/Type_of_Brokerage_Scheme_should_be_Local.validationRule-meta.xml
<ValidationRule>
    <fullName>Type_of_Brokerage_Scheme_should_be_Local</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Type__c ,&quot;NRI&quot; ),
Start_Date__c &gt;= DATE(2024,04,01))</errorConditionFormula>
    <errorDisplayField>Type__c</errorDisplayField>
    <errorMessage>The type of brokerage scheme should be Local.</errorMessage>
</ValidationRule>