force-app/main/default/objects/Brokerage_Scheme__c/listViews/All_Approved_and_Active_Scheme.listView-meta.xml
<ListView>
    <fullName>All_Approved_and_Active_Scheme</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Base_Brokerage_for_Local_Bookings__c</columns>
    <columns>Base_Brokerage_for_OS_NRI__c</columns>
    <columns>Project_Location__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Slab_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approval_Status__c</field>
        <operation>equals</operation>
        <value>Approved by Level 2</value>
    </filters>
    <filters>
        <field>AOP_CP__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Project__c</field>
        <operation>equals</operation>
    </filters>
    <label>All Approved and Active Scheme</label>
    <sharedTo>
        <role>Director</role>
    </sharedTo>
</ListView>