force-app/main/default/objects/Brokerage_Scheme__c/listViews/All_Brokerage_Scheme_Internal.listView-meta.xml
<ListView>
    <fullName>All_Brokerage_Scheme_Internal</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Active__c</columns>
    <columns>Base_Brokerage_for_Local_Bookings__c</columns>
    <columns>Base_Brokerage_for_OS_NRI__c</columns>
    <columns>Slab_Type__c</columns>
    <columns>Type__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Project_Location__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Start_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>8/31/2023</value>
    </filters>
    <filters>
        <field>End_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>8/31/2023</value>
    </filters>
    <label>All Brokerage Scheme Internal</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>