force-app/main/default/objects/Brokerage_Scheme__c/listViews/All_Brokerage_Schemes.listView-meta.xml
<ListView>
    <fullName>All_Brokerage_Schemes</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Approval_Status__c</columns>
    <columns>Base_Brokerage_for_Local_Bookings__c</columns>
    <columns>Base_Brokerage_for_OS_NRI__c</columns>
    <columns>Slab_Type__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Brokerage Schemes</label>
    <sharedTo>
        <allPartnerUsers></allPartnerUsers>
        <role>Channel_Partner_TL</role>
    </sharedTo>
</ListView>