force-app/main/default/objects/Brokerage_Scheme__c/listViews/Scheme_Approval_Pending_Karthik.listView-meta.xml
<ListView>
    <fullName>Scheme_Approval_Pending_Karthik</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Scheme_Approver_2__c</field>
        <operation>contains</operation>
        <value>Karthik</value>
    </filters>
    <filters>
        <field>Approval_Status__c</field>
        <operation>equals</operation>
        <value>Pending Level 2 Approval</value>
    </filters>
    <label>Scheme Approval Pending Karthik</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>